terminado html y css

--- a/scss/libs/_globales.scss
+++ b/scss/libs/_globales.scss
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: 'Inter', sans-serif;
+    font-size: $font-size;
+    p{
+        color: $darkBlue;
+    }
+}
