--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,6 @@
 @import "libs/variables";
 @import "libs/globales";
+@import "libs/grid";
+@import "libs/breakponit";
+@import "components/imagenes";
+@import "components/about";
