--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,138 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+}
+body p {
+  color: #202046;
+}
+
+/* Media Queries Mixin
+**********************/
+.imagenes .main__buttons {
+  box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media only screen and (min-width: 768px) {
+  main {
+    display: grid;
+    grid-template-columns: 30% 30%;
+    grid-template-rows: 1fr 30%;
+    justify-content: center;
+    align-content: center;
+    max-width: 1440px;
+  }
+}
+
+.imagenes {
+  height: 55vh;
+  width: 375px;
+  background: url("../images/pattern-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) {
+  .imagenes {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+}
+.imagenes .main__imagenes {
+  text-align: center;
+  position: relative;
+}
+.imagenes .main__imagenes img {
+  width: 60%;
+  border-radius: 5px;
+}
+.imagenes .main__buttons {
+  position: absolute;
+  border-radius: 30px;
+  width: 90px;
+  height: 45px;
+  bottom: 40px;
+  left: 40%;
+  bottom: -10px;
+  background: white;
+  display: flex;
+  justify-content: space-around;
+}
+.imagenes .main__buttons a {
+  width: 20px;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.main__about {
+  width: 90%;
+  margin: 0 auto;
+  background-image: url("../images/pattern-quotes.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 80px;
+  padding: 0px 35px;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 500;
+}
+@media only screen and (min-width: 768px) {
+  .main__about {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    width: 40vw;
+    padding: 0px;
+    position: relative;
+    justify-self: center;
+    align-self: center;
+  }
+}
+.main__about .testimonial {
+  padding-top: 35px;
+}
+.main__about .testimonial__title {
+  margin-top: 20px;
+  font-weight: 700;
+}
+
+.testimonial__final {
+  margin-top: 30px;
+  height: 15vh;
+  width: 100vw;
+  background-image: url("../images/pattern-curve.svg");
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: contain;
+}
+@media only screen and (min-width: 768px) {
+  .testimonial__final {
+    margin-top: 0;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+}
